        Class CrossingIterator:
            - Moved into link/graph.h, since this is not used anywhere
              outside the Boost Graph Library interface.
        Class Cusp:
            - These objects can now be passed around by value; their memory
              locations are not intended to uniquely identify a cusp.
            - Added a copy constructor and copy assignment operator.
        Class Cyclotomic:
            - Added member and global swap() functions.
            - Changed polynomial() to return by value, not by pointer.
            - Added a constructor that takes coefficients via an iterator pair.
        Class DiscType:
            - Almost everything in this class is now constexpr.
            - The class constant NONE is deprecated.  Just use DiscType().
            - Added a bool() operator that tests for a null disc type.
        Class DiscSpecIterator:
            - This is now a template class, templated upon the
              DiscSetSurface / DiscSetSurfaceData type that it works with.
        Class DiscSetSurface, DiscSetSurfaceData:
            - Merged into a single class DiscSetSurfaceDataImpl, with
              appropriate typedefs for DiscSetSurface and DiscSetSurfaceData.
            - Added copy/move construction and copy/move assignment.
            - Added member and global swap() functions.
            - Function adjacentDisc() now returns an optional pair by value,
              instead of taking output variables by reference and
              returning newly allocated pointers that could be null.
        Class DiscSetTet, DiscSetTetData:
            - The destructors are no longer virtual.  Classes that own
              DiscSetTetData objects now need to know the specific subclass.
            - DiscSetTetData has a new typedef Data, and the old typedef
              DataPtr is now deprecated.
            - Added copy construction and copy assignment.